Allow large uploads

--- a/htdocs/php.ini
+++ b/htdocs/php.ini
@@ -1,6 +1,9 @@
 ; Use APC, for what little good it does via CGI.
 apc.enabled = 1
 
+; Allow large uploads
+upload_max_filesize = 5M
+
 ; Report errors rarely.
 error_reporting = 7
 display_errors = Off
