--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,27 @@
-.htpasswd
+*/.htpasswd
+*/.htaccess
+htdocs/admin/phpmyadmin/
 .users
-vendor/
-wp-config.php
-settings.inc.php
-downloads/*
+htdocs/vendor/
+htdocs/includes/settings.inc.php
+htdocs/downloads/
 *.srt
-video/metadata.csv
-admin/memcache.php
-audio/
-cache/
-finance/
-mirror/
-
-# Wordpress
-blog/*
-!blog/wp-content/
-blog/wp-content/*
-!blog/wp-content/mu-plugins/
-!blog/wp-content/plugins/
-!blog/wp-content/themes/
+htdocs/video/
+htdocs/admin/memcache.php
+htdocs/audio/
+htdocs/cache/
+htdocs/rss/cache/
+htdocs/photosynthesis/rss/cache/
+htdocs/finance/
+htdocs/api/1.0/finance
+htdocs/mirror/
+htdocs/blog/
+htdocs/cron/hashes/
+backups/
+logs/
+html
+alarmlimit
+process-audio
+process-video
+lobbyist.php
+petition.php
