--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,2 @@
-language: php
-php:
-  - '5.4'
-  - '5.5'
-  - '5.6'
+before_script:
+  - if find . -name "*.php" ! -path "./vendor/*" -exec php -l {} \; | grep "Fatal error"; then exit 1; fi
