--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
+language: php
 before_script:
   - if find . -name "*.php" ! -path "./vendor/*" -exec php -l {} \; | grep "Fatal error"; then exit 1; fi
