--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,19 @@
 # Exclude third-party libraries
+engines:
+  phpmd:
+    enabled: true
+  fixme:
+    enabled: true
+  eslint:
+    enabled: true
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      -php
+      -bash
 exclude_paths:
 - htdocs/includes/Zend/
 - htdocs/includes/htmlpurifier/
