Remove invalid language, add 2 new ones

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -13,7 +13,8 @@ engines:
     config:
       languages:
         -php
-        -bash
+        -javascript
+        -css
 exclude_paths:
 - htdocs/includes/Zend/
 - htdocs/includes/htmlpurifier/
