--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -21,10 +21,12 @@ ratings:
   - "**.css"
   - "**.js"
 exclude_paths:
-- htdocs/includes/Zend/
-- htdocs/includes/htmlpurifier/
-- htdocs/includes/phpxmlrpc/
-- htdocs/includes/phpmailer/
-- htdocs/includes/magpierss/
-- htdocs/js/scriptaculous/
-- htdocs/js/flowplayer-6.0.5/
+- htdocs/includes/Zend/**
+- htdocs/includes/htmlpurifier/**
+- htdocs/includes/phpxmlrpc/**
+- htdocs/includes/phpmailer/**
+- htdocs/includes/magpierss/**
+- htdocs/js/scriptaculous/**
+- htdocs/js/flowplayer-6.0.5/**
+- htdocs/admin/apc.php
+- htdocs/admin/memcache.php
