--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,9 @@
 engines:
   phpmd:
     enabled: true
+    checks:
+      Controversial/CamelCaseParameterName:
+        enabled: false
   fixme:
     enabled: true
   eslint:
