--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -24,15 +24,17 @@ ratings:
   - "**.css"
   - "**.js"
 exclude_paths:
-- htdocs/includes/Zend/**
-- htdocs/includes/htmlpurifier/**
-- htdocs/includes/phpxmlrpc/**
-- htdocs/includes/phpmailer/**
-- htdocs/includes/magpierss/**
+- htdocs/includes/Zend.DELETEME/**
+- htdocs/includes/htmlpurifier/*
+- htdocs/includes/phpxmlrpc.DELETEME/*
+- htdocs/includes/phpmailer/*
+- htdocs/includes/magpierss/*
 - htdocs/includes/simplepie.inc.php
 - htdocs/js/jquery.*.js
 - htdocs/includes/sphinxapi.php
-- htdocs/js/scriptaculous/**
-- htdocs/js/flowplayer-6.0.5/**
+- htdocs/js/scriptaculous/*
+- htdocs/js/flowplayer-6.0.5/*
+- htdocs/js/flowplayer-3.2.18/*
+- htdocs/js/flowplayer/*
 - htdocs/admin/apc.php
 - htdocs/admin/memcache.php
