Store cookies on the filesystem
Closes #130.

--- a/htdocs/php.ini
+++ b/htdocs/php.ini
@@ -9,11 +9,9 @@ error_reporting = 7
 display_errors = Off
 log_errors = Off
 
-include_path = ".:/vol/www/richmondsunlight.com/html/includes/"
+include_path = ".:/vol/www/richmondsunlight.com/htdocs/includes/"
 
-; Save sessions to Redis, with a long storage time.
-session.save_handler = redis
-session.save_path = "tcp://127.0.0.1:6379"
+; Save sessions with a long storage time.
 session.gc_maxlifetime = 31449600
 session.cookie_lifetime = 31449600
 session.cache_expire = 31449600
