Fix the PHP validation path
Toward #98.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
 install:
 - composer install
 script:
-- find cron/*.php includes/*.php -print0 |xargs -0 -n1 -P8 php -l
+- find htdocs/*.php -print0 |xargs -0 -n1 -P8 php -l
   && ./deploy/config_variables.sh
   && ./deploy/aws_credentials.sh
   && zip -r latest *
