Quiet the ZIP process
It’s clogging up the logs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 - find htdocs/*.php -print0 |xargs -0 -n1 -P8 php -l
   && ./deploy/config_variables.sh
   && ./deploy/aws_credentials.sh
-  && zip -r latest *
+  && zip -qr latest *
   && mkdir -p upload
   && mv latest.zip upload/latest.zip
 deploy:
