Make the include path relative
This allows it to work under any path, e.g. on the staging site. Toward
#141.

--- a/htdocs/php.ini
+++ b/htdocs/php.ini
@@ -9,7 +9,7 @@ error_reporting = 7
 display_errors = Off
 log_errors = Off
 
-include_path = ".:/vol/www/richmondsunlight.com/htdocs/includes/"
+include_path = ".:includes/"
 
 ; Save sessions with a long storage time.
 session.gc_maxlifetime = 31449600
