--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   && ./deploy/branch_deploy.sh
   && ./deploy/config_variables.sh
   && ./deploy/aws_credentials.sh
-  && zip -qr latest *
+  && zip -qr latest .
   && mkdir -p upload
   && mv latest.zip upload/latest.zip
 - if [ "$TRAVIS_BRANCH" = "master" ]; then mv upload/latest.zip upload/staging.zip; fi
