Accept any v4.9 of HTML Purifier

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
         "elasticsearch/elasticsearch": "~0.4",
         "kellan/magpierss": "dev-master",
         "PHPMailer/PHPMailer": "~5.2",
-        "ezyang/htmlpurifier":"dev-master"
+        "ezyang/htmlpurifier":"~4.9"
     }
 }
