--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 htdocs/admin/phpmyadmin/
 .users
 htdocs/vendor/
+htdocs/includes/vendor/
 htdocs/includes/settings.inc.php
 htdocs/downloads/
 *.srt
