Run cookie garbage collection more often
Toward #241.

--- a/htdocs/php.ini
+++ b/htdocs/php.ini
@@ -11,9 +11,9 @@ log_errors = Off
 
 include_path = ".:includes/"
 
-; Save sessions with a long storage time.
-session.gc_maxlifetime = 31449600
-session.cookie_lifetime = 31449600
-session.cache_expire = 31449600
+; Save sessions with a three-month storage time.
+session.gc_maxlifetime = 7776000
+session.cookie_lifetime = 7776000
+session.cache_expire = 7776000
 session.cookie_secure = On
 session.cache_limiter = private
