--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,14 @@
         "kellan/magpierss": "dev-master",
         "PHPMailer/PHPMailer": "~5.2",
         "ezyang/htmlpurifier":"~4.9"
+    },
+    "autoload": {
+        "classmap": [
+            "htdocs/includes/vendor/"
+        ],
+        "files": ["htdocs/includes/functions.inc.php"]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5"
     }
 }
