Use a different repository for PHPUnit
This is to deal with a Composer error (requiring PHP 7, mysteriously),
in the flailing hope that this will fix it.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "files": ["htdocs/includes/functions.inc.php"]
     },
     "require-dev": {
-        "phpunit/phpunit": "^5"
+        "sebastianbergmann/phpunit": "^5"
     }
 }
