--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "files": ["htdocs/includes/functions.inc.php"]
     },
     "require-dev": {
-        "phpunit/phpunit": "^5"
+        "phpunit/phpunit": "^5",
+        "phpdocumentor/reflection-docblock": "~3"
     }
 }
