Take a guess of which version of php-token-stream we need
There are no release notes for any version, so there’s no (easy) way to
know for sure. Toward #242.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5",
+        "phpunit/php-token-stream": "~1",
         "phpdocumentor/reflection-docblock": "~3"
+
     }
 }
