--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require-dev": {
         "phpunit/phpunit": "^5",
         "phpunit/php-token-stream": "~1",
-        "phpdocumentor/reflection-docblock": "~3"
-
+        "phpdocumentor/reflection-docblock": "~3",
+        "symfony/yaml": "~3"
     }
 }
