--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,4 @@ web:
   ports:
     - "5000:80"
   volumes:
-    - htdocs:/var/www/example.com/public_html/
+    - ./htdocs:/var/www/example.com/public_html/
