--- a/htdocs/manifest.json
+++ b/htdocs/manifest.json
@@ -4,6 +4,7 @@
     "start_url": ".",
     "description": "Tracking Virginia’s General Assembly since 2007.",
     "background_color": "#243a51",
+    "theme_color": "#790806",
     "dir": "ltr",
     "lang": "en-us",
     "display": "standalone"
