Build npm packages on Travis
I’m not sure this syntax will work. Toward #214.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ addons:
       - awscli
 install:
 - composer install
+- cd htdocs/js/vendor; npm run build
 script:
 - find htdocs/*.php -print0 |xargs -0 -n1 -P8 php -l
   && ./deploy/branch_deploy.sh
