--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
+repos:
 - repo: git://github.com/pre-commit/pre-commit-hooks
-  sha: v1.2.0
+  sha: v1.2.3
   hooks:
   -  id: check-executables-have-shebangs
   -  id: check-json
