--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,15 @@ repos:
   -  id: detect-aws-credentials
   -  id: end-of-file-fixer
   -  id: trailing-whitespace
+- repo: git://github.com/detailyang/pre-commit-shell
+  sha: 1.0.2
+  hooks:
+  -  id: shell-lint
+- repo: https://github.com/digitalpulp/pre-commit-php
+  sha: 1.3.0
+  hooks:
+  -  id: php-lint-all
+     args: [-s first]
+  -  id: php-cs-fixer
+     files: \.(php)$
+     args: ["--rules=@PSR2,-braces,-lowercase_constants"]
