--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
   && mkdir -p upload
   && mv latest.zip upload/latest.zip
 - if [ "$TRAVIS_BRANCH" = "master" ]; then mv upload/latest.zip upload/staging.zip; fi
+- if [ "$TRAVIS_BRANCH" = "master" ]; then ./deploy/increase_verbosity.sh; fi
 deploy:
 - provider: s3
   access_key_id: $AWS_ACCESS_KEY
