--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,4 +21,4 @@ repos:
      args: [-s first]
   -  id: php-cs-fixer
      files: \.(php)$
-     args: ["--rules=@PSR2,-braces,-lowercase_constants"]
+     args: ["--rules=@PSR2,-braces,-lowercase_constants,ereg_to_preg"]
