--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ addons:
       - awscli
 install:
 - composer install
-- cd htdocs/js/vendor; npm run build
+- cd htdocs/js/vendor; npm install; npm run build
 script:
 - cd ../../..
 - find htdocs/*.php -print0 |xargs -0 -n1 -P8 php -l
