Run Sonar before installing dependencies
We don't need to run Sonar on all of the third-party libraries. It takes forever.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ addons:
       - awscli
   sonarcloud:
     organization: "openva"
+script:
+- sonar-scanner
 install:
 - composer install
 - cd htdocs/js/vendor; npm install; npm run build
@@ -30,7 +32,6 @@ script:
 - find htdocs/*.php -print0 |xargs -0 -n1 -P8 php -l
   && ./deploy/branch_deploy.sh
   && ./deploy/config_variables.sh
-  && sonar-scanner
   && ./deploy/aws_credentials.sh
   && zip -qr latest .
   && mkdir -p upload
