--- a/htdocs/php.ini
+++ b/htdocs/php.ini
@@ -7,7 +7,7 @@ upload_max_filesize = 5M
 ; Report errors rarely.
 error_reporting = 7
 display_errors = Off
-log_errors = Off
+log_errors = On
 
 include_path = ".:includes/"
 
