Eliminate PHP linting
This is done by Sonarcloud now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,7 @@ install:
 - cd htdocs/js/vendor; npm install; npm run build
 script:
 - cd ../../..
-- find . -type f -name "*.php" -print0 |xargs -0 -n1 -P8 php -l
-  && ./deploy/branch_deploy.sh
+- ./deploy/branch_deploy.sh
   && ./deploy/config_variables.sh
   && ./deploy/aws_credentials.sh
   && zip -qr latest .
