--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - "5000:80"
     volumes:
       - type: bind
-        source: ./htdocs
-        target: /var/www/html
+        source: .
+        target: /var/www
     container_name: rs_web
   api:
     build:
