Run Sonar before the installations
Toward #286.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
       - awscli
   sonarcloud:
     organization: "openva"
-script:
+before_install:
 - sonar-scanner
 install:
 - composer install
