Move Sonar exclusions to Sonar
I'd sure prefer to run SonarQube prior to installing the dependencies, but it doesn't look like Travis supports that. So, instead, I've added a big, hairy set of `sonar.exclusions`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,6 @@ addons:
       - awscli
   sonarcloud:
     organization: "openva"
-before_install:
-- sonar-scanner
 install:
 - composer install
 - cd htdocs/js/vendor; npm install; npm run build
@@ -25,6 +23,7 @@ script:
 - ./deploy/branch_deploy.sh
   && ./deploy/config_variables.sh
   && ./deploy/aws_credentials.sh
+  && sonar-scanner
   && zip -qr latest .
   && mkdir -p upload
   && mv latest.zip upload/latest.zip
