--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
-sonar.exclusions=htdocs/includes/htmlpurifier/**,htdocs/includes/magpierss/**,htdocs/includes/phpmailer/**,htdocs/includes/vendor/**,htdocs/js/vendor/**,htdocs/js/scriptaculous/**,htdocs/js/flowplayer/**,htdocs/js/flowplayer-3.2.18/**,htdocs/js/flowplayer-6.0.5/**,htdocs/js/sorttable.js
+sonar.exclusions=htdocs/includes/htmlpurifier/**,htdocs/includes/magpierss/**,htdocs/includes/phpmailer/**,htdocs/includes/vendor/**,htdocs/includes/simplepie.inc.php,htdocs/js/vendor/**,htdocs/js/scriptaculous/**,htdocs/js/flowplayer/**,htdocs/js/flowplayer-3.2.18/**,htdocs/js/flowplayer-6.0.5/**,htdocs/js/sorttable.js,deploy/database.sql
