Revert "Merge branch 'master' into deploy"
This reverts commit 65a82b1fe1bf662b1b4662e412b18e75910dabb0, reversing
changes made to f8ece876262d968f31c0a12dc46f5b770162b7b3.

--- a/htdocs/php.ini
+++ b/htdocs/php.ini
@@ -7,7 +7,7 @@ upload_max_filesize = 5M
 ; Report errors rarely.
 error_reporting = 7
 display_errors = Off
-log_errors = On
+log_errors = Off
 
 include_path = ".:includes/"
 
