--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "doctrine/instantiator":"1.0.5",
         "components/jquery": "~1.7",
         "components/jqueryui": "~1.8",
-        "simplepie/simplepie": "1.5",
-        "neutron/sphinxsearch-api": "dev-master"
+        "simplepie/simplepie": "1.5"
     },
     "autoload": {
         "classmap": [
