--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "doctrine/instantiator":"1.0.5",
         "components/jquery": "~1.7",
         "components/jqueryui": "~1.8",
-        "simplepie/simplepie": "1.5"
+        "simplepie/simplepie": "1.5",
+        "romainneutron/Sphinx-Search-API-PHP-Client": "2.0.8.1"
+
     },
     "autoload": {
         "classmap": [
