--- a/htdocs/admin/.htaccess
+++ b/htdocs/admin/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "Admin Section"
-AuthUserFile /vol/www/richmondsunlight.com/html/admin/.users
+AuthUserFile /var/www/richmondsunlight.com/htdocs/admin/.users
 require valid-user
