Fux staging S3 bucket

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ deploy:
 - provider: codedeploy
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
-  bucket: staging.richmondsunlight.com
+  bucket: deploy.richmondsunlight.com
   key: rs-web-staging.zip
   bundle_type: zip
   application: RS-Web
