Run tests in CI/CD
Toward #114.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ addons:
       - awscli
   sonarcloud:
     organization: "openva"
+services:
+  - docker
 install:
 - composer install
 - cd htdocs/js/vendor; npm install; npm run build
@@ -31,6 +33,8 @@ script:
   && ./deploy/branch_deploy.sh
   && ./deploy/config_variables.sh
   && sonar-scanner
+  && ./docker-run.sh
+  && ./deploy/tests/run-all.sh
   && ./deploy/aws_credentials.sh
   && zip -qr rs-web-deploy . --exclude *.git* *.scannerwork*
   && mkdir -p upload
