Debug build process

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -25,6 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - name: Figure out where we are
+      run: pwd
+
     - name: Specify filesystem path, per branch
       run: ./deploy/branch_deploy.sh
     
