Use Yarn instead of npm
NPM only installs GitHub repos that have package.json files, while Yarn has no problem doing it. Switch made.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,14 @@ addons:
       - php5.6-memcached
       - zip
       - awscli
+      - yarn
   sonarcloud:
     organization: "openva"
 services:
   - docker
 install:
 - composer install
-- cd htdocs/js/vendor; npm install; npm run build
+- cd htdocs/js/vendor; yarn build
 script:
 - cd ../../..
 - ./deploy/branch_deploy.sh
