--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,17 @@ addons:
       - php5.6-memcached
       - zip
       - awscli
-      - yarn
   sonarcloud:
     organization: "openva"
 services:
   - docker
+before_install:
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn=1.19.2-1
+cache:
+  yarn: true
 install:
 - composer install
 - cd htdocs/js/vendor; yarn build
