--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "components/jquery": "~1.7",
         "components/jqueryui": "~1.8",
         "simplepie/simplepie": "1.5",
-        "romainneutron/sphinx-search-api-php-client": "2.0.8.1"
-
+        "romainneutron/sphinx-search-api-php-client": "2.0.8.1",
+        "cedx/akismet": "~11"
     },
     "autoload": {
         "classmap": [
