--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -28,6 +28,7 @@ Header always set X-Frame-Options "SAMEORIGIN"
 Header always set X-Xss-Protection "1; mode=block"
 Header always set X-Content-Type-Options "nosniff"
 Header always set Referrer-Policy "strict-origin-when-cross-origin"
+Header always edit Set-Cookie (.*) "$1; SameSite=Lax"
 
 <IfModule mod_deflate.c>
 	AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript
