--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
 - cd htdocs/js/vendor; yarn build
 script:
 - cd ../../..
+- find htdocs/*.php -print0 |xargs -0 -n1 -P8 php -l
 - ./deploy/branch_deploy.sh
   && ./deploy/config_variables.sh
   && sonar-scanner
