--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "components/jqueryui": "~1.8",
         "simplepie/simplepie": "1.5.4",
         "romainneutron/sphinx-search-api-php-client": "2.0.8.1",
-        "tijsverkoyen/akismet": "~1"
+        "tijsverkoyen/akismet": "~1",
+        "aws/aws-sdk-php": "~3.0"
     },
     "autoload": {
         "psr-4": {
