--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,8 +6,8 @@ php_value include_path ".:includes/"
 #php_value session_cache_expire 31449600
 #php_value display_errors Off
 #php_value log_errors Off
-#php_value session.save_handler redis
-#php_value session.save_path tcp://127.0.0.1:6379
+php_value session.save_handler redis
+php_value session.save_path tcp://127.0.0.1:6379
 
 # For Matomo
 php_value always_populate_raw_post_data -1
