Well, that didn't work
Turns out SonarQube relies on Node, so this isn't about what's being scanned.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
-sonar.exclusions=htdocs/includes/vendor/**,htdocs/js/vendor/**,htdocs/js/scriptaculous/**,htdocs/js/flowplayer/**,htdocs/js/flowplayer-3.2.18/**,htdocs/js/flowplayer-6.0.5/**,htdocs/js/sorttable.js,deploy/database.sql,htdocs/admin/apc.php,deploy/mysql/**,htdocs/admin/**,htdocs/admin/video/**,htdocs/admin/comments/**,*.js
+sonar.exclusions=htdocs/includes/vendor/**,htdocs/js/vendor/**,htdocs/js/scriptaculous/**,htdocs/js/flowplayer/**,htdocs/js/flowplayer-3.2.18/**,htdocs/js/flowplayer-6.0.5/**,htdocs/js/sorttable.js,deploy/database.sql,htdocs/admin/apc.php,deploy/mysql/**,htdocs/admin/**,htdocs/admin/video/**,htdocs/admin/comments/**
