--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
 before_install:
   - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
   - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo add-apt-repository ppa:ondrej/php
+  - sudo add-apt-repository -y ppa:ondrej/php
   - sudo apt-get update -qq
   - sudo apt-get install -y -qq yarn=1.19.2-1
   - sudo apt-get install -y -qq php5.6-cli php5.6-mysql php5.6-curl php5.6-memcached zip awscli
