Move to per-environment CodeDeploy configs
This will solve the problem of staging deploying to production. Toward #755.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,12 @@ jobs:
       - run: >-
           if [ "$GITHUB_BRANCH" = "master" ]; then
           ./deploy/increase_verbosity.sh; fi
+      - run: >-
+          if [ "$GITHUB_BRANCH" = "master" ]; then
+            mv appspec-staging.yml appspec.yml
+          elif [ "$GITHUB_BRANCH" = "deploy" ]; then
+            mv appspec-deploy.yml appspec.yml
+          fi
   deploy:
     runs-on: ubuntu-18.04
     needs: build # Don't deploy unless the build succeeds
