--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,9 +53,8 @@ jobs:
   deploy:
     runs-on: ubuntu-18.04
     needs: build # Don't deploy unless the build succeeds
-    env:
-      GITHUB_BRANCH: ${{ needs.build.outputs.github_branch }} 
     steps:
+      - run: echo "Deploy branch is ${{ needs.build.outputs.github_branch }}"
       - name: Get the secret-populated code
         uses: actions/download-artifact@v2
         with:
