--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,12 @@ jobs:
       - uses: Firenza/secrets-to-env@v1.1.0
         with:
           secrets: ${{ toJSON(secrets) }}
+      - name: Get branch name
+        shell: bash
+        run: echo "##[set-output name=github_branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: save_branch
+      - name: Make branch name available as Bash variable
+        run: GITHUB_BRANCH=${GITHUB_REF#refs/heads/}
       - run: >-
           sudo apt-get update && 
           sudo apt-get install -y awscli php5.6-cli php5.6-curl php5.6-memcached php5.6-mysql yarn zip
