--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Get branch name
         shell: bash
         run: echo "##[set-output name=github_branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: get_branch_name
+        id: get_branch
       - name: Make branch name available as Bash variable
         run: GITHUB_BRANCH=${GITHUB_REF#refs/heads/}
       - run: >-
