--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: echo "##[set-output name=github_branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: get_branch
       - name: Make branch name available as Bash variable
-        run: GITHUB_BRANCH=${GITHUB_REF#refs/heads/}
+        run: env GITHUB_BRANCH=${GITHUB_REF#refs/heads/}
       - run: >-
           sudo apt-get update && 
           sudo apt-get install -y awscli php5.6-cli php5.6-curl php5.6-memcached php5.6-mysql yarn zip
