--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=openva_richmondsunlight.com
+sonar.organization=openva
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=richmondsunlight.com
 sonar.projectVersion=1.0
