--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           elif [ "$GITHUB_BRANCH" = "deploy" ]; then
             cp appspec-deploy.yml appspec.yml
           fi
-          ls appspec*
+      - run: ls appspec*
       - name: Save secret-populated code for a subsequent deploy step
         uses: actions/upload-artifact@v4
         with:
